Try to check required libraries in linux